add adr for tech baselines and adjust pom to reflect decision